--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
         <title>Jetlog</title>
     </head>
 
-    <body>
+    <body class="bg-white text-black dark:bg-gray-900 dark:text-gray-100">
         <div id="app"></div>
         <script type="module" src="index.js"></script>
     </body>
